# classic-signals

./: README.md  setup.cfg
sources/classic/signals/: __init__.py  _utils.py  decorator.py  hub.py  reaction.py  signal.py  utils.py  watcher.py
tests/: conftest.py  test_decorator.py  test_events.py  test_hub.py  test_reaction.py  test_signal.py
